lib_LTLIBRARIES = libaatm.la 

libaatm_la_SOURCES= abs16o17o.h abs16o18o.h abso2_vib.h ATMAngle.cpp	\
ATMAngle.h ATMAtmosphereType.h ATMAtmosphereType.cpp ATMEnumerations.h	\
ATMError.cpp ATMError.h ATMFrequency.cpp ATMFrequency.h ATMHumidity.cpp	\
ATMHumidity.h ATMInverseLength.cpp ATMInverseLength.h ATMLength.cpp	\
ATMLength.h ATMMassDensity.cpp ATMMassDensity.h ATMNumberDensity.cpp	\
ATMNumberDensity.h ATMOpacity.cpp ATMOpacity.h ATMPercent.cpp		\
ATMPercent.h ATMPressure.cpp ATMPressure.h ATMProfile.cpp ATMProfile.h	\
ATMRefractiveIndex.cpp ATMRefractiveIndex.h				\
ATMRefractiveIndexProfile.cpp ATMRefractiveIndexProfile.h		\
ATMSkyStatus.cpp ATMSkyStatus.h ATMSpectralGrid.cpp ATMSpectralGrid.h	\
ATMTemperature.cpp ATMTemperature.h ATMType.cpp ATMType.h		\
ATMTypeName.h ATMWaterVaporRadiometer.cpp ATMWaterVaporRadiometer.h	\
ATMWVRMeasurement.cpp ATMWVRMeasurement.h mainpage.h

libaatm_la_CFLAGS = -Wall
libaatm_la_CPPFLAGS = -Wall

libaatm_la_LIBADD = 

include_HEADERS = ATMAngle.h ATMAtmosphereType.h ATMEnumerations.h	\
ATMError.h ATMFrequency.h ATMHumidity.h ATMInverseLength.h ATMLength.h	\
ATMMassDensity.h ATMNumberDensity.h ATMOpacity.h ATMPercent.h		\
ATMPressure.h ATMProfile.h ATMRefractiveIndex.h				\
ATMRefractiveIndexProfile.h ATMSkyStatus.h ATMSpectralGrid.h		\
ATMTemperature.h ATMType.h ATMTypeName.h ATMWaterVaporRadiometer.h	\
ATMWVRMeasurement.h
