lib_LTLIBRARIES = libaatm.la 

libaatm_la_SOURCES= ATMAngle.cpp ATMAngle.h ATMEnumerations.h		\
                    ATMError.cpp ATMError.h ATMFrequency.cpp		\
                    ATMFrequency.h ATMHumidity.h ATMInverseLength.cpp	\
                    ATMInverseLength.h ATMLength.cpp ATMLength.h	\
                    ATMMassDensity.cpp ATMMassDensity.h			\
                    ATMNumberDensity.cpp ATMNumberDensity.h		\
                    ATMOpacity.cpp ATMOpacity.h ATMPercent.cpp		\
                    ATMPercent.h ATMPressure.cpp ATMPressure.h		\
                    ATMProfile.cpp ATMProfile.h ATMRefractiveIndex.cpp	\
                    ATMRefractiveIndex.h ATMRefractiveIndexProfile.cpp	\
                    ATMRefractiveIndexProfile.h ATMSkyStatus.cpp	\
                    ATMSkyStatus.h ATMSpectralGrid.cpp			\
                    ATMSpectralGrid.h ATMTemperature.cpp		\
                    ATMTemperature.h ATMWaterVaporRadiometer.cpp	\
                    ATMWaterVaporRadiometer.h ATMWVRMeasurement.cpp	\
                    ATMWVRMeasurement.h mainpage.h ATMException.cpp	\
                    ATMConstants.h ATMException.h \
		    ATMCommon.h ATMVersion.cpp ATMVersion.h

libaatm_la_CFLAGS = -Wall
libaatm_la_CPPFLAGS = -Wall

libaatm_la_LIBADD = 

libaatm_la_LDFLAGS = -version-info $(AATM_LT_VERSION)


include_HEADERS = ATMAngle.h ATMEnumerations.h ATMError.h		\
                  ATMFrequency.h ATMHumidity.h ATMInverseLength.h	\
                  ATMLength.h ATMMassDensity.h ATMNumberDensity.h	\
                  ATMOpacity.h ATMPercent.h ATMPressure.h ATMProfile.h	\
                  ATMRefractiveIndex.h ATMRefractiveIndexProfile.h	\
                  ATMSkyStatus.h ATMSpectralGrid.h ATMTemperature.h	\
                  ATMWaterVaporRadiometer.h ATMWVRMeasurement.h		\
                  ATMException.h ATMCommon.h  ATMVersion.h
